--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title>LE titre de ma page</title>
         <p>
-            Voici  l'activité de l'aviron à Zaghouène:<br>
-            <img src="Avironphoto.png" alt="Photo Aviron au lac " />
+            <payement " />
             </p>
     </head>
     <body>
